fix: CORS env var, Dockerfile PORT expose